--- a/index.html
+++ b/index.html
@@ -204,10 +204,9 @@
         <div class="section-title">
           <h2>Program</h2>
         </div>
-
-
+<!--
         <p> We are working hard on the Brainhack Marseille 2023 programm, but it's not ready yet. Let us know if you have any suggestions!</p>
-<!--        <p>Please find bellow the program of the Brainhack event (timezone Paris UTC+1). If you want to add the following schedule to your own personal Google agenda, click on the "Save the dates" button and then click on the "+ Google agenda" located at the bottom right of your screen.</p>-->
+        <p>Please find bellow the program of the Brainhack event (timezone Paris UTC+1). If you want to add the following schedule to your own personal Google agenda, click on the "Save the dates" button and then click on the "+ Google agenda" located at the bottom right of your screen.</p>-->
 
         <div class="d-flex justify-content-center">
           <a class="btn btn-warning" href="https://calendar.google.com/calendar/embed?src=brainhack.marseille%40gmail.com&ctz=Europe%2FParis" target="_blank"><h4>SAVE THE DATES</h4></a>
@@ -215,64 +214,137 @@
 
         <br>
 
+      <!-- ===================== December 4th ===================== -->
 
-
-      <!-- ===================== November 28th ===================== -->
-        <!--
         <div class="section-title">
-          <h3>28th November</h3>
+          <h3>Monday 4th December</h3>
         </div>
 
         <table class="table table-striped">
           <tbody>
             <tr>
               <th scope="row" class="align-middle text-nowrap" style="width: 10%">09h00-10h15</th>
-              <td class="table-primary"><b>Introduction to BrainHack Marseille 2023 (In-person/Online)</b>
+              <td class="table-primary"><b>Welcome to BrainHack Marseille 2023 (In-person/Online)</b>
                 <ul>
-                  <li>09h00-09h15 - Introduction to the event</li>
-                  <li>09h15-10h15 - Projects pitches</li>
+                  <li>09h30-10h00 - Welcoming breakfast</li>
+                  <li>10h00-10h15 - <b>Introduction to the event</b> <i> by Matthieu Gilson & David Meunier (Marseille), Ruggero Basanisi (Lucca) </i> </li>
                 </ul>
               </td>
             </tr>
             <tr>
-              <th scope="row" class="align-middle text-nowrap" style="width: 10%">10h15-12h30</th>
-              <td class="table-success"><b>Hacking and/or Training:</b>
+              <th scope="row" class="align-middle text-nowrap" style="width: 10%">10h15-13h00</th>
+              <td class="table-success"><b>Training session:</b>
                 <ul>
-                  <li>11h00-11h45 - <b>Open  tools for open science</b> By Simon Moré, Manuel Mercier & ArnaudLe Troter </li>
-                  <li>11h45-12h00 - <b>Reproducible science</b> By Guillaume Auzias</li>
+                  <li>10h15-11h45 - <b>Python basic</b> <i> by Julien Caugant </i> </li>
+                  <li>11h45-12h10 - <b>Jupyter notebook </b> <i> by <a href="https://www.univ-amu.fr/fr/public/cedre"> CEDRE </a> team </i> </li>
+                  <li>12h10-12h30 - <b>IA tools for machine learning </b> <i> by CEDRE team </i> </li>
+                  <li>12h30-13h00 - <b> JAX </b> <i> by CEDRE team </i> </li>
+
                 </ul>
               </td>
             </tr>
             <tr>
-              <th scope="row" class="align-middle text-nowrap">12h30-14h00</th>
-              <td class="table-danger"><b>Break</b></td>
+              <th scope="row" class="align-middle text-nowrap">13h00-14h00</th>
+              <td class="table-danger"><b>Lunch Break</b></td>
+            </tr>
+            <th scope="row" class="align-middle text-nowrap" style="width: 10%">14h00-15h20</th>
+            <td class="table-primary"><b> Sharing expertise session</b>
+                <ul>
+                  <li>14h00-14h40 Presentation <i> by people from Lucca </i> </li>
+                  <li>14h40-15h20 Green session and round table <i> by Marmaduke & Manuel </i> </li>
+                </ul>
+              </td>
+            <tr>
+              <th scope="row" class="align-middle text-nowrap">15h20-15h30</th>
+              <td class="table-danger"><b>Caffe Break</b></td>
             </tr>
             <tr>
-              <th scope="row" class="align-middle text-nowrap">14h00-17h30</th>
+              <th scope="row" class="align-middle text-nowrap">15h30-16h50</th>
               <td class="table-success">
-                <b>Hacking and/or Training:</b>
+                <b>Sharing expertise on opensource projects:</b>
                 <ul>
-                  <li>14h30-15h00 - <b>Github basic</b> By David Meunier</li>
-                  <li>15h00-15h30 - <b>Github advanced</b> By David Meunier</li>
-                  <li>15h30-16h00 - <b>Introduction to Matlab</b> By Manuel Mercier</li>
-                  <li>16h00-16h30 - <b>Introduction to Python*</b> By Julia Sprenger</li>
-                  <li>16h30-17h00 - <b>Python advanced*</b> By Julia Sprenger</li>
+                  <li>15h30-16h10 - <b> </b> <i> <a href="https://www.fz-juelich.de/profile/hoffstaedter_f"> Felix Hoffstaedter (Julich, BABS)</a>  </i> </li>
+                  <li>16h10-16h50 - <b> </b> <i> <a href="https://www.neuro.polymtl.ca/team/faculty/julien-cohen-adad"> Julien Cohen-Adad (Montreal, Polytech)</a>  </i> </li>
                 </ul>
-                <b>*Python required:</b> To participate in this session bring a laptop with a Python installation and wifi access. For this follow the regular install instructions for your operating systems <a href="https://conda.io/projects/conda/en/stable/user-guide/install/index.html#regular-installation" target="_blank">here</a>. We recommend installing <b>Miniconda</b>. You should be able to open an Anaconda prompt and typing `print('hello world')` should display 'hello word' as a response. Tell us ahead of the session if you need further assistance with setting up Miniconda.
-                The session will give an overview of the basic concepts in Python (finding your way in Python, basic data types, variables, advanced types, loops, etc...)
               </td>
             </tr>
+
             <tr>
-              <th scope="row" class="align-middle text-nowrap">17h30-></th>
+              <th scope="row" class="align-middle text-nowrap">16h50-17h00</th>
+              <td class="table-danger"><b>Caffe Break</b></td>
+            </tr>
+
+            <th scope="row" class="align-middle text-nowrap" style="width: 10%">17h00-18h00</th>
+            <td class="table-primary"><b>Projects pitches session & speed dating</b>
+            </td>
+            <tr>
+
+            <tr>
+              <th scope="row" class="align-middle text-nowrap">18h00</th>
               <td class="table-danger"><b>BHM social event!</b></td>
             </tr>
           </tbody>
         </table>
-        -->
 
+      <div class="section-title">
+          <h3>Tuesday 5th December</h3>
       </div>
 
-    </section><!-- End About Us Section -->
+      <table class="table table-striped">
+        <tbody>
+          <tr>
+            <th scope="row" class="align-middle text-nowrap" style="width: 10%">09h00-13h00</th>
+            <td class="table-primary"><b>Project Work</b>
+              <ul>
+                <li>09h00-09h30 - breakfast</li>
+              </ul>
+            </td>
+          </tr>
+          <tr>
+            <th scope="row" class="align-middle text-nowrap">13h00-14h00</th>
+            <td class="table-danger"><b>Lunch Break</b></td>
+          </tr>
+          <th scope="row" class="align-middle text-nowrap" style="width: 10%">14h00-18h00</th>
+          <td class="table-primary"><b>Project Work</b>
+              <ul>
+                <li>17h00-17h30 - <b>Intermediate Project Presentations (Marseille/Lucca) </b> </li>
+                <li>17h30-18h00 - <b>Open Science game</b> <i> Julien Caugant (Pouillon room) </i> </li>
+              </ul>
+            </td>
+
+        </tbody>
+      </table>
+
+        <div class="section-title">
+          <h3>Wednesday 6th December</h3>
+      </div>
+
+      <table class="table table-striped">
+        <tbody>
+          <tr>
+            <th scope="row" class="align-middle text-nowrap" style="width: 10%">09h00-13h00</th>
+            <td class="table-primary"><b>Project Work</b>
+              <ul>
+                <li>09h00-09h30 - breakfast</li>
+              </ul>
+            </td>
+          </tr>
+          <tr>
+            <th scope="row" class="align-middle text-nowrap">13h00-14h00</th>
+            <td class="table-danger"><b>Lunch Break</b></td>
+          </tr>
+          <th scope="row" class="align-middle text-nowrap" style="width: 10%">14h00-18h00</th>
+          <td class="table-primary"><b>Project Work</b>
+              <ul>
+                <li>17h00-18h00 - <b>Final Project Presentations & Brainhack Wrap-up</b> </li>
+              </ul>
+            </td>
+
+        </tbody>
+      </table>
+
+        </section>
+
 
 
     <!-- ======= Projects Section ======= -->
@@ -284,16 +356,17 @@
 
           <p> No projects available yet.</p>
 
-          <!--
-          <p>Here you can find all the informations about the event projects. <br>
-            If you want to <b>submit a project</b> you should follow the link, fill the form, and open a github issue. Projects can be anything you'd like to work on during the event with other people (coding, discussing a procedure with coworkers, brainstorming about a new idea), as long as you're ready to minimally organize this! </p>
-        </div>
-        <div class="d-flex justify-content-center">
-          <a class="btn btn-warning" href="https://github.com/Brainhack-Marseille/brainhack-marseille.github.io/issues/new?assignees=&labels=project&template=brainhack-project-template-2023-2.yml" target="_blank"><h4>SUBMIT PROJECT</h4></a>
-        </div>
-        -->
 
-        <hr>
+<!--          <p>Here you can find all the informations about the event projects. <br>-->
+<!--            If you want to <b>submit a project</b> you should follow the link, fill the form, and open a github issue. Projects can be anything you'd like to work on during the event with other people (coding, discussing a procedure with coworkers, brainstorming about a new idea), as long as you're ready to minimally organize this! </p>-->
+<!--        </div>-->
+<!--        <div class="d-flex justify-content-center">-->
+<!--          <a class="btn btn-warning" href="https://github.com/Brainhack-Marseille/brainhack-marseille.github.io/issues/new?assignees=&labels=project&template=brainhack-project-template-2023-2.yml" target="_blank"><h4>SUBMIT PROJECT</h4></a>-->
+<!--        </div>-->
+
+      </div>
+
+    </section>
 
         <!--
 
