--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="index.html">Home</a></li>
+          <li><a href="#coc">CoC</a></li>
           <li><a href="#register">Register</a></li>
           <li><a href="#program">Program</a></li>
           <li><a href="#projects">Projects</a></li>
@@ -171,6 +172,31 @@
       </div>
     </section><!-- End Cliens Section -->
 
+ <!-- ======= COC Section ======= -->
+
+ <section id="coc" class="coc">
+  <div class="container" data-aos="fade-up">
+
+    <div class="section-title">
+      <h2>Code of Conduct</h2>
+    </div>
+
+    <p align="center">
+
+    <a href="https://brainhack.org/code-of-conduct" target="_blank">As all Brainhacks</a>, BrainHackMarseille is dedicated to providing a <b>harassment-free Brainhack experience for everyone</b>,<br>
+      regardless of gender, gender identity and expression, sexual orientation, disability, physical appearance, body size, race, age or religion.<br>
+      <br>
+      We do not tolerate harassment of event participants in any form.<br>
+      <br>
+      Sexual language and imagery is not appropriate for any event venue, including talks.<br>
+      <br>
+      Event participants violating these rules may be sanctioned or expelled from the event.
+
+  </div>
+</section>
+
+  <!-- ======= Registration Section ======= -->
+
     <section id="register" class="register">
       <div class="container" data-aos="fade-up">
 
@@ -237,7 +263,7 @@
                 <ul>
                   <li>10h15-11h45 - <b>Python basic</b> <i> by Julien Caugant </i> </li>
                   <li>11h45-12h10 - <b>Jupyter notebook </b> <i> by <a href="https://www.univ-amu.fr/fr/public/cedre"> CEDRE </a> team </i> </li>
-                  <li>12h10-12h30 - <b>IA tools for machine learning </b> <i> by CEDRE team </i> </li>
+                  <li>12h10-12h30 - <b>AI tools for machine learning </b> <i> by CEDRE team </i> </li>
                   <li>12h30-13h00 - <b> JAX </b> <i> by CEDRE team </i> </li>
 
                 </ul>
@@ -792,7 +818,7 @@
               <div class="member-info">
                 <h4>Manuel Mercier</h4>
                 <span></span>
-                <p>Research Engineer</p>
+                <p>Research Associate</p>
               </div>
             </div>
           </div>
@@ -840,6 +866,18 @@
               </div>
             </div>
           </div>
+
+          <div class="col-lg-4 mt-4">
+            <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="400">
+              <div class="pic"><img src="images/team/chris_zielinski.jpg" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Hugo Dary</h4>
+                <span></span>
+                <p>Research Engineer</p>
+              </div>
+            </div>
+          </div>
+
 
         </div>
 
