--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
               </td>
             <tr>
               <th scope="row" class="align-middle text-nowrap">15h20-15h30</th>
-              <td class="table-danger"><b>Caffe Break</b></td>
+              <td class="table-danger"><b>Coffe Break</b></td>
             </tr>
             <tr>
               <th scope="row" class="align-middle text-nowrap">15h30-16h50</th>
@@ -297,7 +297,7 @@
 
             <tr>
               <th scope="row" class="align-middle text-nowrap">16h50-17h00</th>
-              <td class="table-danger"><b>Caffe Break</b></td>
+              <td class="table-danger"><b>Coffe Break</b></td>
             </tr>
 
             <th scope="row" class="align-middle text-nowrap" style="width: 10%">17h00-18h00</th>
@@ -380,15 +380,15 @@
         <div class="section-title">
           <h2>Projects</h2>
 
-          <p> No projects available yet.</p>
+<!--          <p> No projects available yet.</p> -->
 
 
-<!--          <p>Here you can find all the informations about the event projects. <br>-->
-<!--            If you want to <b>submit a project</b> you should follow the link, fill the form, and open a github issue. Projects can be anything you'd like to work on during the event with other people (coding, discussing a procedure with coworkers, brainstorming about a new idea), as long as you're ready to minimally organize this! </p>-->
-<!--        </div>-->
-<!--        <div class="d-flex justify-content-center">-->
-<!--          <a class="btn btn-warning" href="https://github.com/Brainhack-Marseille/brainhack-marseille.github.io/issues/new?assignees=&labels=project&template=brainhack-project-template-2023-2.yml" target="_blank"><h4>SUBMIT PROJECT</h4></a>-->
-<!--        </div>-->
+         <p>Here you can find all the informations about the event projects. <br>
+            If you want to <b>submit a project</b> you should follow the link, fill the form, and open a github issue. Projects can be anything you'd like to work on during the event with other people (coding, discussing a procedure with coworkers, brainstorming about a new idea), as long as you're ready to minimally organize this! </p>
+        </div>
+        <div class="d-flex justify-content-center">
+          <a class="btn btn-warning" href="https://github.com/Brainhack-Marseille/brainhack-marseille.github.io/issues/new?assignees=&labels=project&template=brainhack-project-template-2023.yml" target="_blank"><h4>SUBMIT PROJECT</h4></a>
+        </div>
 
       </div>
 
