--- a/index.html
+++ b/index.html
@@ -252,8 +252,8 @@
               <th scope="row" class="align-middle text-nowrap" style="width: 10%">09h00-10h15</th>
               <td class="table-primary"><b>Welcome to BrainHack Marseille 2023 (In-person/Online)</b>
                 <ul>
-                  <li>09h30-10h00 - Welcoming breakfast</li>
-                  <li>10h00-10h15 - <b>Introduction to the event</b> <i> by Matthieu Gilson & David Meunier (Marseille), Ruggero Basanisi (Lucca) </i> </li>
+                  <li>09h30-09h45 - Welcoming breakfast</li>
+                  <li>09h45-10h00 - <b>Introduction to the event</b> <i> by Matthieu Gilson & David Meunier (Marseille), Ruggero Basanisi (Lucca) </i> </li>
                 </ul>
               </td>
             </tr>
@@ -261,10 +261,8 @@
               <th scope="row" class="align-middle text-nowrap" style="width: 10%">10h15-13h00</th>
               <td class="table-success"><b>Training session:</b>
                 <ul>
-                  <li>10h15-11h45 - <b>Python basic</b> <i> by Julien Caugant </i> </li>
-                  <li>11h45-12h10 - <b>Jupyter notebook </b> <i> by <a href="https://www.univ-amu.fr/fr/public/cedre"> CEDRE </a> team </i> </li>
-                  <li>12h10-12h30 - <b>AI tools for machine learning </b> <i> by CEDRE team </i> </li>
-                  <li>12h30-13h00 - <b> JAX </b> <i> by CEDRE team </i> </li>
+                  <li>10h00-11h30 - <b>Python basic</b> <i> by Julien Caugant </i> </li>
+                  <li>11h30-13h00 - <b>Jupyter notebook / IA tools for machine learning </b> <i> by <a href="https://www.univ-amu.fr/fr/public/cedre"> CEDRE </a> team </i> </li>
 
                 </ul>
               </td>
@@ -289,8 +287,8 @@
               <td class="table-success">
                 <b>Sharing expertise on opensource projects:</b>
                 <ul>
-                  <li>15h30-16h10 - <b> </b> <i> <a href="https://www.fz-juelich.de/profile/hoffstaedter_f"> Felix Hoffstaedter (Julich, BABS)</a>  </i> </li>
-                  <li>16h10-16h50 - <b> </b> <i> <a href="https://www.neuro.polymtl.ca/team/faculty/julien-cohen-adad"> Julien Cohen-Adad (Montreal, Polytech)</a>  </i> </li>
+                  <li>15h30-16h10 - <b> </b> <i> <a href="https://www.fz-juelich.de/profile/hoffstaedter_f"> Felix Hoffstaedter (Julich)</a>  </i> </li>
+                  <li>16h10-16h50 - <b> </b> <i> <a href="https://www.neuro.polymtl.ca/team/faculty/julien-cohen-adad"> Julien Cohen-Adad (Montreal)</a>  </i> </li>
                 </ul>
               </td>
             </tr>
@@ -387,7 +385,7 @@
             If you want to <b>submit a project</b> you should follow the link, fill the form, and open a github issue. Projects can be anything you'd like to work on during the event with other people (coding, discussing a procedure with coworkers, brainstorming about a new idea), as long as you're ready to minimally organize this! </p>
         </div>
         <div class="d-flex justify-content-center">
-          <a class="btn btn-warning" href="https://github.com/Brainhack-Marseille/brainhack-marseille.github.io/issues/new?assignees=&labels=project&template=brainhack-project-template-2023.yml" target="_blank"><h4>SUBMIT PROJECT</h4></a>
+          <a class="btn btn-warning" href="https://github.com/arnaudletroter/brainhack-marseille.github.io/issues/new?assignees=&labels=project&template=brainhack-project-template-2023.yml" target="_blank"><h4>SUBMIT PROJECT</h4></a>
         </div>
 
       </div>
