--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
             If you want to <b>submit a project</b> you should follow the link, fill the form, and open a github issue. Projects can be anything you'd like to work on during the event with other people (coding, discussing a procedure with coworkers, brainstorming about a new idea), as long as you're ready to minimally organize this! </p>
         </div>
         <div class="d-flex justify-content-center">
-          <a class="btn btn-warning" href="https://github.com/arnaudletroter/brainhack-marseille.github.io/issues/new?assignees=&labels=project&template=brainhack-project-template-2023.yml" target="_blank"><h4>SUBMIT PROJECT</h4></a>
+          <a class="btn btn-warning" href="https://github.com/Brainhack-Marseille/brainhack-marseille.github.io/issues/new?assignees=&labels=project&template=brainhack-project-template-2023.yml" target="_blank"><h4>SUBMIT PROJECT</h4></a>
         </div>
 
       </div>
@@ -867,7 +867,7 @@
 
           <div class="col-lg-4 mt-4">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="400">
-              <div class="pic"><img src="images/team/chris_zielinski.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="images/team/dary.jpeg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Hugo Dary</h4>
                 <span></span>
