--- a/index.html
+++ b/index.html
@@ -274,32 +274,27 @@
             <th scope="row" class="align-middle text-nowrap" style="width: 10%">14h00-15h20</th>
             <td class="table-primary"><b> Sharing expertise session</b>
                 <ul>
-                  <li>14h00-14h40 Presentation <i> by people from Lucca </i> </li>
-                  <li>14h40-15h20 Green session and round table <i> by Marmaduke & Manuel </i> </li>
+                  <li>14h00-14h40 How to 'Git' on with a clean code <i> by Ruggero Basanisi (Lucca, IMT) </i> </li>
+                  <li>14h40-15h20 Green session and round table <i> by Marmaduke & Manuel Mercier (AMU, INS) </i> </li>
                 </ul>
               </td>
             <tr>
-              <th scope="row" class="align-middle text-nowrap">15h20-15h30</th>
-              <td class="table-danger"><b>Coffe Break</b></td>
+              <th scope="row" class="align-middle text-nowrap">15h20-15h50</th>
+              <td class="table-danger"><b>Coffee Break</b></td>
             </tr>
             <tr>
-              <th scope="row" class="align-middle text-nowrap">15h30-16h50</th>
+              <th scope="row" class="align-middle text-nowrap">15h50-17h10</th>
               <td class="table-success">
                 <b>Sharing expertise on opensource projects:</b>
                 <ul>
-                  <li>15h30-16h10 - <b> </b> <i> <a href="https://www.fz-juelich.de/profile/hoffstaedter_f"> Felix Hoffstaedter (Julich)</a>  </i> </li>
-                  <li>16h10-16h50 - <b> </b> <i> <a href="https://www.neuro.polymtl.ca/team/faculty/julien-cohen-adad"> Julien Cohen-Adad (Montreal)</a>  </i> </li>
+                  <li>15h50-16h30 - <b> </b> <i> <a href="https://www.fz-juelich.de/profile/hoffstaedter_f"> Felix Hoffstaedter (Julich)</a>  </i> </li>
+                  <li>16h30-17h10 - <b> </b> <i> <a href="https://www.neuro.polymtl.ca/team/faculty/julien-cohen-adad"> Julien Cohen-Adad (Montreal)</a>  </i> </li>
                 </ul>
               </td>
             </tr>
-
-            <tr>
-              <th scope="row" class="align-middle text-nowrap">16h50-17h00</th>
-              <td class="table-danger"><b>Coffe Break</b></td>
-            </tr>
-
-            <th scope="row" class="align-middle text-nowrap" style="width: 10%">17h00-18h00</th>
-            <td class="table-primary"><b>Projects pitches session & speed dating</b>
+            
+            <th scope="row" class="align-middle text-nowrap" style="width: 10%">17h10-18h00</th>
+            <td class="table-primary"><b>Short projects presentations between Marseille and Lucca</b>
             </td>
             <tr>
 
