--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
             <td class="table-primary"><b> Sharing expertise session</b>
                 <ul>
                   <li>14h00-14h40 How to 'Git' on with a clean code <i> by Ruggero Basanisi (Lucca, IMT) </i> </li>
-                  <li>14h40-15h20 Green session and round table <i> by Marmaduke & Manuel Mercier (AMU, INS) </i> </li>
+                  <li>14h40-15h20 Green session and round table <i> by Marmaduke Woodman & Manuel Mercier (AMU, INS) </i> </li>
                 </ul>
               </td>
             <tr>
