update second project

--- a/index.html
+++ b/index.html
@@ -206,8 +206,6 @@
 
 <!--        <p> Registration will open end of summer 2023.</p> -->
 
-
-
         <p align="center">To register to the event, please click on the button below to fill the form. The <b>deadline for registration</b> is Wednesday November the 15th .<br>
 <!--          <b>Registration is now CLOSED.</b> -->
           <br>
@@ -448,8 +446,14 @@
               <li>issue two: meaning of research in neuroscience</li>
               </ul>
               <b>Communication channels:</b>
-              <a href="https://framateam.org/next50yearsneuroscience">via framateam</a>
-              <br>
+              <ul>
+              <li><a href="https://framateam.org/next50yearsneuroscience">via framateam</a></li>
+              <li><a href="https://github.com/Brainhack-Marseille/brainhack-marseille.github.io/issues/37">via github issue</a></li>
+              </ul>
+              <b>What will participants learn?</b>
+              Participants will learn to think beyond their specialty and research project.
+              They will learn from other disciplines.
+              They will behave as a responsible citizen instead of just a scientist
               </section>
 
 
@@ -539,26 +543,25 @@
                 </p>
 
                 <b>Link to project repository/sources:</b>
-              <br>
-              <ul>
-              <li><a href="https://github.com/lspieser/myonset">myonset</a></li>
-              </ul>
-              <b>Goals for the BrainHack:</b>
-              <ul>
-              <li>discuss package organisation</li>
-              <li>implement new detection methods (e.g., bayesian changepoint detection)</li>
-              <li>add code testing</li>
-              </ul>
-              <!--<b>Good first issues:</b>
-              <ul>
-              <li>issue one: ecological crisis</li>
-              <li>issue two: meaning of research in neuroscience</li>
-              </ul>-->
-              <b>Communication channels:</b>
-              <a href="https://mattermost.brainhack.org/brainhack/channels/bhg23-marseille-myonset">via mattermost</a>
-              <br>
-              </section>
+                <br>
+                <ul>
+                <li><a href="https://github.com/lspieser/myonset">myonset</a></li>
+                </ul>
+                <b>Goals for the BrainHack:</b>
+                <ul>
+                <li>discuss package organisation</li>
+                <li>implement new detection methods (e.g., bayesian changepoint detection)</li>
+                <li>add code testing</li>
+                </ul>
+                <b>Communication channels:</b>
+                <ul>
+                <li><a href="https://mattermost.brainhack.org/brainhack/channels/bhg23-marseille-myonset">via mattermost</a></li>
+                <li><a href="https://github.com/Brainhack-Marseille/brainhack-marseille.github.io/issues/38">via github issue</a></li>
+                </ul>
+                <b>What will participants learn?</b>
+                Just have fun together ! and learn on electromyography signal if you're interested
 
+              </section>
 
             </div>
           </div>
@@ -567,33 +570,27 @@
         <div class="row justify-content-center">
           <div class="col" data-aos="fade-left" data-aos-delay="100">
             <h4>Required skills</h4>
-            This is a brainstorming project, non-coding skills are required:
+            This is a data visualisation and physiology project, non-coding skills are required:
           </div>
         </div>
 
       <div class="row justify-content-center mt-4">
 
             <div class="progress">
-              <div class="progress-bar bg-info font-weight-bold" role="progressbar" style="width: 100%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                Curiosity 100%
+              <div class="progress-bar bg-info font-weight-bold" role="progressbar" style="width: 80%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                Python coding : 80%
               </div>
             </div>
 
             <div class="progress">
-              <div class="progress-bar bg-success font-weight-bold" role="progressbar" style="width: 100%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                Responsibility 100%
+              <div class="progress-bar bg-success font-weight-bold" role="progressbar" style="width: 70%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                Share ideas : 70%
               </div>
             </div>
 
             <div class="progress">
-              <div class="progress-bar bg-danger font-weight-bold" role="progressbar" style="width: 100%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                English reading 100%
-              </div>
-            </div>
-
-            <div class="progress">
-              <div class="progress-bar bg-warning font-weight-bold" role="progressbar" style="width: 100%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                Writing skills 100%
+              <div class="progress-bar bg-danger font-weight-bold" role="progressbar" style="width: 10%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                Electrophysiology : 10%
               </div>
             </div>
 
